# migchat-rs

./: .gitignore  Cargo.toml  README.md  build.rs  client.toml  client_i.toml
proto/: migchat.proto
src/: client.rs  client_service.rs  proto.rs  server.rs  server_service.rs  storage.rs  ui.rs  user.rs
src/proto/: uuid.rs
src/ui/: app.rs  draw.rs
