[package]
name = "migchat"
version = "0.1.0"
authors = ["Alexander Avramenko <avramenko.a@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "migchat-server"
path = "src/server.rs"

[[bin]]
name = "migchat"
path = "src/client.rs"

[dependencies]
tonic = "0.4"
prost = "0.7"
tokio = { version = "1.4", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3"
fxhash = "0.2"
rand = "0.8"
log = "0.4"
env_logger = "0.8"
clap = "2.33"
config = "0.11"
tui = { version = "0.14", default-features = false, features = ['crossterm'] }
crossterm = "0.19"
tui-logger = "0.6"

[build-dependencies]
tonic-build = "0.4"
